# wordle-clone

./: .gitignore  README.md
backend/: Cargo.toml
backend/.sqlx/: query-419ac549067d2223ed1430b3ddee4a42553d1540fe6907190b5f94a42a541de0.json  query-a0e090d3a342e00250e769d85df84ed130d6454d2b9b62429c2d879c52170422.json  query-c653dc9b180dd1d62deeb664afd4b0312f6e9d9e0b571cce65cb31d189ebe43c.json  query-de7268e9db33d72141f2033f60300d55d738b8f8ac7f51941d13967e62399a6a.json
backend/docker/: docker-compose.yml  init.sql
backend/postgres/: Dockerfile  docker-compose.yml  init.sql
backend/resources/: words.txt
backend/src/: database.rs  main.rs  router.rs  score.rs  word_provider.rs
backend/src/services/: database.rs  extern_api.rs  mod.rs
backend/tests/: word_provider_tests.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts  vue.config.js
frontend/src/: App.vue
frontend/src/api/: backend-api.js  backend-api.ts
frontend/src/components/: Keyboard.vue
frontend/src/components/highscore/: ScoreEntry.vue  ScoreEntrySmall.vue  ShortList.vue
frontend/src/components/play/: GameOver.vue  GameWon.vue  Guess.vue  Letter.vue
frontend/src/router/: index.ts
frontend/src/views/: HighScores.vue  HomePage.vue  PlayGame.vue
